--- a/CyberPlus/src/app/views/login/login.component.css
+++ b/CyberPlus/src/app/views/login/login.component.css
@@ -14,10 +14,6 @@ p {
     align-items: center;
 }
 
-#logo img {
-    width: 100%;
-}
-
 .form-container {
     display: flex;
     justify-content: center;
